
[package]

name = "swing-copters-rs"
version = "0.0.1"
authors = ["Coeuvre <coeuvre@gmail.com>"]

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston"

[dependencies.sdl2_game_window]

git = "https://github.com/pistondevelopers/sdl2_game_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.image]

git = "https://github.com/PistonDevelopers/rust-image"

[dependencies.texture-packer]

git = "https://github.com/Coeuvre/texture-packer"

